# aoc

./: .gitignore  get-input.py
2023/: 2023-1.py  2023-10.py  2023-11.py  2023-12.py  2023-13.py  2023-14.py  2023-15.py  2023-16.py  2023-17.py  2023-18.py  2023-19.py  2023-19_test.py  2023-2.py  2023-20.py  2023-21.py  2023-22-blender.py  2023-22.py  2023-23.py  2023-24.py  2023-25.py  2023-3.py  2023-4.py  2023-5  2023-5.py  2023-6.py  2023-7.py  2023-8.py  2023-9.py  README.md
2023/r05/: Cargo.toml
2023/r05/src/: intervals.rs  main.rs
2023/r08/: 2023-8.input  Cargo.toml
2023/r08/src/: main.rs
2023/r17/: Cargo.toml
2023/r17/src/: main.rs
2023/r20/: Cargo.toml
2023/r20/src/: part1.rs  part2.rs
2023/r23/: Cargo.toml
2023/r23/src/: main.rs
2023/r25/: Cargo.toml
2023/r25/src/: graph.rs  input.rs  part1.rs  queue.rs  sw.rs
2024/01/: 2024-1.py
2024/02/: 2024-2.py
2024/03/: 2024-3.py
2024/04/: 2024-4.py
2024/05/: 2024-5.py
2024/06/: 2024-6.py
2024/07/: 2024-7.py
2024/08/: 2024-8.py
2024/09/: 2024-9.py
2024/10/: 2024-10.py
2024/11/: 2024-11.py
2024/12/: 2024-12.py
2024/13/: 2024-13.py
2024/14/: 2024-14.py
2024/15/: 2024-15.py
2024/16/: 2024-16.py
2024/17/: 2024-17.py
2024/18/: 2024-18.py
2024/19/: 2024-19.py
2024/20/: 2024-20.py
2024/22/: 2024-22.py
2024/23/: 2024-23.py
