[package]
name = "r25"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.7"
itertools = "0.12.0"
parking_lot = "0.12.1"
rand = "0.8.5"
rayon = "1.8.0"

[dev-dependencies]
assert2 = "0.3.11"

[[bin]]
name = "part1"
path = "src/part1.rs"
